--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
             <img src="Cannabis-distillates-1-1024x684.jpg" alt="Destilado Relax">
             <img src="rso_distillates-1200x632.jpg" alt="Destilado Energía">
             <img src="resina-cannabis.jpg" alt="Destilado Sueño">
+            <img src="resina.webp" alt="Extracto WAX">
+            <img src="resina1.webp" alt="Productos Premium">
         </div>
     </section>
-
     <section id="productos">
         <h2>Nuestros Destilados</h2>
         <div class="productos-container">
@@ -59,6 +60,15 @@
                  <input type="number" min="1" max="10" value="1" class="cantidad">
                  <button class="agregar-carrito">🛒 Agregar al Carrito</button>
                  <span class="cantidad-carrito" data-id="4">0</span>
+             </div>
+             <div class="producto" data-id="5">
+                 <h3>Wax Mix Flower Al 99.9%</h3>
+                 <p>Producto premium de alta pureza. Edición Limitada - Stock: 5 unidades</p>
+                 <p class="precio">$80.000</p>
+                 <label>Cantidad:</label>
+                 <input type="number" min="1" max="5" value="1" class="cantidad">
+                 <button class="agregar-carrito">🛒 Agregar al Carrito</button>
+                 <span class="cantidad-carrito" data-id="5">0</span>
              </div>
          </div>
      </section>
