Implementar reducción de stock en tiempo real al agregar productos

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
              </div>
              <div class="producto" data-id="4">
                  <h3>Extracto WAX</h3>
-                 <p>Extracto de alta calidad. Edición Limitada - Stock: 10 unidades</p>
+                 <p class="stock" data-id="4">Extracto de alta calidad. Edición Limitada - Stock: 10 unidades</p>
                  <p class="precio">$60.000</p>
                  <label>Cantidad:</label>
                  <input type="number" min="1" max="10" value="1" class="cantidad">
@@ -63,7 +63,7 @@
              </div>
              <div class="producto" data-id="5">
                  <h3>Wax Mix Flower Al 99.9%</h3>
-                 <p>Producto premium de alta pureza. Edición Limitada - Stock: 5 unidades</p>
+                 <p class="stock" data-id="5">Producto premium de alta pureza. Edición Limitada - Stock: 5 unidades</p>
                  <p class="precio">$80.000</p>
                  <label>Cantidad:</label>
                  <input type="number" min="1" max="5" value="1" class="cantidad">
