--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
              <div class="producto" data-id="5">
                  <h3>Wax Mix Flower Al 99.9%</h3>
                  <p class="stock" data-id="5">Producto premium de alta pureza. Edición Limitada - Stock: 5 unidades</p>
-                 <p class="precio">$80.000</p>
+                 <p class="precio"><del>$80.000</del> $70.000 <span style="color: red;">Solo por hoy</span></p>
                  <label>Cantidad:</label>
                  <input type="number" min="1" max="5" value="1" class="cantidad">
                  <button class="agregar-carrito">🛒 Agregar al Carrito</button>
