Agregar imágenes a productos y actualizar mensaje de compra exitosa

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <h2>Nuestros Destilados</h2>
         <div class="productos-container">
             <div class="producto" data-id="1">
+                <img src="resina-cannabis.jpg" alt="Destilado Relax" class="producto-img">
                 <h3>Destilado Relax</h3>
                 <p>Destilado de cannabis para relajación profunda. 1ml</p>
                 <p class="precio">$50.000</p>
@@ -35,15 +36,17 @@
                 <span class="cantidad-carrito" data-id="1">0</span>
             </div>
             <div class="producto" data-id="2">
+                <img src="rso_distillates-1200x632.jpg" alt="Destilado Energía" class="producto-img">
                 <h3>Destilado Energía</h3>
                 <p>Destilado de cannabis para aumentar la energía. 1ml</p>
-                <p class="precio">$55.000</p>
+                <p class="precio">$50.000</p>
                 <label>Cantidad:</label>
                 <input type="number" min="1" value="1" class="cantidad">
                 <button class="agregar-carrito">🛒 Agregar al Carrito</button>
                  <span class="cantidad-carrito" data-id="2">0</span>
              </div>
              <div class="producto" data-id="3">
+                <img src="resina.webp" alt="Destilado Sueño" class="producto-img">
                 <h3>Destilado Sueño</h3>
                 <p>Destilado de cannabis para mejorar el sueño. 1ml</p>
                 <p class="precio">$60.000</p>
@@ -53,6 +56,7 @@
                  <span class="cantidad-carrito" data-id="3">0</span>
              </div>
              <div class="producto" data-id="4">
+                 <img src="resina1.webp" alt="Extracto WAX" class="producto-img">
                  <h3>Extracto WAX</h3>
                  <p class="stock" data-id="4">Extracto de alta calidad. Edición Limitada - Stock: 10 unidades</p>
                  <p class="precio">$60.000</p>
@@ -62,6 +66,7 @@
                  <span class="cantidad-carrito" data-id="4">0</span>
              </div>
              <div class="producto" data-id="5">
+                 <img src="Marijuana-Cannabis-Weed-Bud-Gram.jpg" alt="Wax Mix Flower Al 99.9%" class="producto-img">
                  <h3>Wax Mix Flower Al 99.9%</h3>
                  <p class="stock" data-id="5">Producto premium de alta pureza. Edición Limitada - Stock: 5 unidades</p>
                  <p class="precio"><del>$80.000</del> $70.000 <span style="color: red;">Solo por hoy</span></p>
