Cambiar imagen del producto Wax Mix Flower

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                  <span class="cantidad-carrito" data-id="4">0</span>
              </div>
              <div class="producto" data-id="5">
-                 <img src="Marijuana-Cannabis-Weed-Bud-Gram.jpg" alt="Wax Mix Flower Al 99.9%" class="producto-img">
+                 <img src="ylh1r29kqct91.jpg" alt="Wax Mix Flower Al 99.9%" class="producto-img">
                  <h3>Wax Mix Flower Al 99.9%</h3>
                  <p class="stock" data-id="5">Producto premium de alta pureza. Edición Limitada - Stock: 5 unidades</p>
                  <p class="precio"><del>$80.000</del> $70.000 <span style="color: red;">Solo por hoy</span></p>
