--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <img src="resina1.webp" alt="Productos Premium">
         </div>
     </section>
+    <div class="promo-banner" onclick="alert('¡Oferta especial! 20% de descuento solo por hoy.')">SOLO &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; POR &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; HOY &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 20% &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; DE &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; DESCUENTO</div>
     <section id="productos">
         <h2>Nuestros Destilados</h2>
         <div class="productos-container">
