Agregar sistema de calificación por estrellas

--- a/admin.html
+++ b/admin.html
@@ -17,6 +17,11 @@
         <div id="ventas-lista"></div>
     </section>
 
+    <section id="ratings">
+        <h2>Calificaciones de Usuarios</h2>
+        <div id="ratings-lista"></div>
+    </section>
+
     <script src="script.js"></script>
     <script>
         // Verificar contraseña
@@ -27,6 +32,7 @@
         } else {
             // Cargar ventas en admin
             actualizarVentas();
+            actualizarRatings();
         }
     </script>
 </body>
