--- a/index.html
+++ b/index.html
@@ -113,6 +113,21 @@
         </div>
     </div>
 
+    <div id="rating-modal" class="modal" style="display: none;">
+        <div class="modal-content">
+            <span class="close" id="close-rating">&times;</span>
+            <h2>¿Cómo calificarías nuestra página?</h2>
+            <div class="stars">
+                <span class="star" data-value="1">★</span>
+                <span class="star" data-value="2">★</span>
+                <span class="star" data-value="3">★</span>
+                <span class="star" data-value="4">★</span>
+                <span class="star" data-value="5">★</span>
+            </div>
+            <button id="submit-rating">Enviar Calificación</button>
+        </div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
