--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header style="position: relative;">
+    <header>
         <h1>Destilado De Alta Calidad Premium En Palmira Y Alrededores!!!</h1>
         <p>Productos naturales y de alta calidad para tu bienestar</p>
-        <div id="carrito-icon" style="position: absolute; top: 10px; right: 10px; cursor: pointer; font-size: 24px;">🛒 <span id="carrito-count">0</span></div>
     </header>
+    <div id="carrito-icon" style="position: fixed; left: 10px; top: 50%; transform: translateY(-50%); cursor: pointer; font-size: 24px; background-color: rgba(0,0,0,0.5); color: white; padding: 10px; border-radius: 5px; z-index: 1001;">🛒 <span id="carrito-count">0</span></div>
     
     <section id="banner">
         <div class="slider">
