--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
                 <h3>Destilado Relax</h3>
                 <p>Destilado de cannabis para relajación profunda. 1ml</p>
                 <p class="precio">$50.000</p>
+                <label>Sabor:</label>
+                <select class="sabor">
+                    <option>TANGIE</option>
+                    <option>ICE CREAM</option>
+                    <option>OG KUSH</option>
+                    <option>GELATO 45</option>
+                </select>
                 <label>Cantidad:</label>
                 <input type="number" min="1" value="1" class="cantidad">
                 <button class="agregar-carrito">🛒 Agregar al Carrito</button>
@@ -42,6 +49,13 @@
                 <h3>Destilado Energía</h3>
                 <p>Destilado de cannabis para aumentar la energía. 1ml</p>
                 <p class="precio">$50.000</p>
+                <label>Sabor:</label>
+                <select class="sabor">
+                    <option>TANGIE</option>
+                    <option>ICE CREAM</option>
+                    <option>OG KUSH</option>
+                    <option>GELATO 45</option>
+                </select>
                 <label>Cantidad:</label>
                 <input type="number" min="1" value="1" class="cantidad">
                 <button class="agregar-carrito">🛒 Agregar al Carrito</button>
@@ -52,6 +66,13 @@
                 <h3>Destilado Sueño</h3>
                 <p>Destilado de cannabis para mejorar el sueño. 1ml</p>
                 <p class="precio">$60.000</p>
+                <label>Sabor:</label>
+                <select class="sabor">
+                    <option>TANGIE</option>
+                    <option>ICE CREAM</option>
+                    <option>OG KUSH</option>
+                    <option>GELATO 45</option>
+                </select>
                 <label>Cantidad:</label>
                 <input type="number" min="1" value="1" class="cantidad">
                 <button class="agregar-carrito">🛒 Agregar al Carrito</button>
@@ -62,6 +83,13 @@
                  <h3>Extracto WAX</h3>
                  <p class="stock" data-id="4">Extracto de alta calidad. Edición Limitada - Stock: 10 unidades</p>
                  <p class="precio">$60.000</p>
+                 <label>Sabor:</label>
+                 <select class="sabor">
+                     <option>TANGIE</option>
+                     <option>ICE CREAM</option>
+                     <option>OG KUSH</option>
+                     <option>GELATO 45</option>
+                 </select>
                  <label>Cantidad:</label>
                  <input type="number" min="1" max="10" value="1" class="cantidad">
                  <button class="agregar-carrito">🛒 Agregar al Carrito</button>
@@ -72,6 +100,13 @@
                  <h3>Wax Mix Flower Al 99.9%</h3>
                  <p class="stock" data-id="5">Producto premium de alta pureza. Edición Limitada - Stock: 5 unidades</p>
                  <p class="precio"><del>$80.000</del> $70.000 <span style="color: red;">Solo por hoy</span></p>
+                 <label>Sabor:</label>
+                 <select class="sabor">
+                     <option>TANGIE</option>
+                     <option>ICE CREAM</option>
+                     <option>OG KUSH</option>
+                     <option>GELATO 45</option>
+                 </select>
                  <label>Cantidad:</label>
                  <input type="number" min="1" max="5" value="1" class="cantidad">
                  <button class="agregar-carrito">🛒 Agregar al Carrito</button>
