Mostrar calificaciones en frontend después de compra

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     </section>
     <div id="clock"></div>
     <div class="promo-banner" onclick="alert('¡Oferta especial! 20% de descuento solo por hoy.')">SOLO &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; POR &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; HOY &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 20% &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; DE &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; DESCUENTO</div>
+    <div id="ratings-display"></div>
     <section id="productos">
         <h2>Nuestros Destilados</h2>
         <div class="productos-container">
