Cambiar título principal a Destilado De Alta Calidad Premium

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Destilado De Alta Calidad Premium En Palmira Y Alrededores!!!</h1>
+        <h1>Destilado De Alta Calidad Premium</h1>
         <p>Productos naturales y de alta calidad para tu bienestar</p>
     </header>
     <div id="carrito-icon" style="position: fixed; left: 10px; top: 50%; transform: translateY(-50%); cursor: pointer; font-size: 24px; background-color: rgba(0,0,0,0.5); color: white; padding: 10px; border-radius: 5px; z-index: 1001;">🛒 <span id="carrito-count">0</span></div>
