Agregar costo de envío de .000 al total del carrito

--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
             <button id="checkout-btn">Proceder al Pago</button>
             <div id="checkout" style="display: none;">
                 <h3>Checkout - Pago con Nequi</h3>
+                <div id="checkout-total"></div>
                 <form id="checkout-form">
                     <label for="nombre">Nombre:</label>
                     <input type="text" id="nombre" required>
